# ui-chan

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  run.bat
rvc_processor/: Cargo.toml
rvc_processor/src/: main.rs
src/: command.rs  data.rs  event_handler.rs  main.rs  prelude.rs  rvc.rs
src/command/: dev.rs  owner.rs  song.rs  user.rs
src/data/: song.rs
