[package]
name = "ui-chan"
version = "0.2.4"
edition = "2021"
authors = ["Kimin Kim <kaytiz550@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["rvc", "exe_icon"]
rvc = []
exe_icon = []


[dependencies]
poise = "0.6"
songbird = { version = "0.4", features = ["builtin-queue"] }
symphonia = { version = "0.5", features = ["aac", "mp3"] }
tokio = { version = "1.21.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = "0.11"
futures = "0.3.30"
rspotify = { version = "0.13.2", features = ["env-file"] }


[build-dependencies]
winresource = "0.1.17"